service-mesh/istioinaction/extern-service/httpbin-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "httpbin.apps.ocp.aws.tntinfra.net"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httbin-virtualservice
spec:
  hosts:
  - "httpbin.apps.ocp.aws.tntinfra.net"
  gateways:
  - httpbin-gateway
  http:
  - route:
    - destination:
        host: httpbin.org
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-httpbin-org
spec:
  hosts:
  - httpbin.org 
  ports:
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
